--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "digit-dream-predictor-app",
   "version": "1.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "cd frontend && npm run dev",
-    "build": "cd frontend && npm run build",
-    "preview": "cd frontend && npm run preview"
-  },
-  "workspaces": [
-    "frontend",
-    "backend"
-  ]
+  "lockfileVersion": 3,
+  "requires": true,
+  "packages": {
+    "": {
+      "name": "digit-dream-predictor-app",
+      "version": "1.0.0",
+      "workspaces": [
+        "frontend",
+        "backend"
+      ]
+    }
+  }
 }
